--- a/PROGRAMA1.IPYNB
+++ b/PROGRAMA1.IPYNB
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "menor de edad\n"
+      "mayor de edad\n"
      ]
     }
    ],
