--- a/sumaaresta.ipynb
+++ b/sumaaresta.ipynb
@@ -9,17 +9,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El segundo numero es mayor\n"
+      "10.0\n"
      ]
     }
    ],
    "source": [
-    "numero1= float(input(\"escribe un numero\"))\n",
-    "numero2= float(input(\"escribe otro numero\"))\n",
-    "if numero1>numero2:\n",
-    "    print(\"El primer numero es mayor\")\n",
-    "else:\n",
-    "    print(\"El segundo numero es mayor\")"
+    "numero1=float (input(\"escribe un numero \"))\n",
+    "numero2=float (input(\"escribe otro numero\"))\n",
+    "\n",
+    "a1 = numero1+numero2\n",
+    "c = numero1*numero2\n",
+    "\n",
+    "if numero1 >= numero2:\n",
+    "    print(a1)\n",
+    "if numero1 <= numero2:\n",
+    "    print(c)\n",
+    "\n"
    ]
   }
  ],
