--- a/velocidadsonido.ipynb
+++ b/velocidadsonido.ipynb
@@ -2,24 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El segundo numero es mayor\n"
+      "14.577259475218659\n"
      ]
     }
    ],
    "source": [
-    "numero1= float(input(\"escribe un numero\"))\n",
-    "numero2= float(input(\"escribe otro numero\"))\n",
-    "if numero1>numero2:\n",
-    "    print(\"El primer numero es mayor\")\n",
-    "else:\n",
-    "    print(\"El segundo numero es mayor\")"
+    "distancia=float (input(\"escribe la distanciaa en metros que quieres que recorra el sonido\"))\n",
+    "\n",
+    "velocidad_del_sonido = 343\n",
+    "tiempo = distancia / velocidad_del_sonido\n",
+    "print(tiempo)"
    ]
   }
  ],
